[Payments] Use the proper error string for unsupported shipping option

Bug: 723653
Change-Id: I2513d499d97d8aa8133f69acde8c4f2c2da96fa2
Reviewed-on: https://chromium-review.googlesource.com/508474
Commit-Queue: Mathieu Perreault <mathp@chromium.org>
Reviewed-by: Anthony Vallee-Dubois <anthonyvd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#472822}
Former-commit-id: 2c1f319d05a01eae5d4a76221ee06e7bc2640eb3